--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -12,7 +12,9 @@
 /* -----------------------------------------
    Shared Styles
 ----------------------------------------- */
-
+body {
+	/*background-color: whitesmoke;*/
+}
 
 
 /* -----------------------------------------
