--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -16,11 +16,11 @@
    	/*background-color: whitesmoke;*/
    }
 
-   #customDropdown{
+ /*  #customDropdown{
    	height:32px;
    	line-height:32px;
    	background-repeat:no-repeat;
-   }
+   }*/
 
 
 /* -----------------------------------------
