--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -40,6 +40,9 @@
          background: transparent;
          height: 32px;
       }
+      #thumb{
+         border: 5px #2BA6CB solid;
+      }
 
 
 /* -----------------------------------------
