--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -43,6 +43,9 @@
       #thumb{
          border: 3px #2BA6CB solid;
       }
+      .specBorder{
+         border: 3px #2BA6CB solid;
+      }
 
 
 /* -----------------------------------------
