--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -36,7 +36,7 @@
       padding: 20px;
       }*/
 
-      select{
+/*      select{
          background: transparent;
          height: 32px;
       }
@@ -45,7 +45,7 @@
       }
       .specBorder{
          border: 3px #2BA6CB solid;
-      }
+      }*/
 
 
 /* -----------------------------------------
