--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -46,6 +46,9 @@
       .specBorder{
          border: 3px #2BA6CB solid;
       }*/
+      .search-result:hover{
+         background-color: yellow;
+      }
 
 
 /* -----------------------------------------
