--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -71,10 +71,46 @@
             max-height: 100px; 
          }
 
+         .contain-to-grid, .top-bar{
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#333333'); /* for IE */
+            background: -webkit-gradient(linear, left top, left bottom, from(#333333), to(#333333)); /* for webkit browsers */
+            background: -moz-linear-gradient(top,  #333333,  #333333); /* for firefox 3.6+ */
+         }
+
          .profile-thumb{
             position: relative;
             top: 8px;
          }
+
+         .logo{
+            position: relative;
+            top: 5px;
+            font-size: 55px !important;
+            /*font-family: 'Damion', cursive;*/
+            /*font-family: 'Grand Hotel', cursive;*/
+            font-family: 'Lobster', cursive;
+            transform: rotate(0deg);
+            -ms-transform: rotate(0deg); /* IE 9 */
+            -webkit-transform: rotate(0deg); /* Safari and Chrome */
+            -o-transform: rotate(0deg); /* Opera */
+            -moz-transform: rotate(0deg); /* Firefox */
+            letter-spacing:0px;
+             text-align: center;
+             /*color: #333 !important;*/
+            /*text-transform: uppercase;*/
+            /*text-shadow: #555 0px 2px 3px;*/
+            text-shadow: 2px 2px 0 #ffd217, 4px 4px 0 #5ac7ff, 6px 6px 0 #ffd217, 8px 8px 0 #5ac7ff;
+         }
+
+         body{
+            background: gray;
+         }
+
+         .row{
+            background: white;
+         }
+
+
 
 
 /* -----------------------------------------
