--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -47,9 +47,10 @@
          border: 3px #2BA6CB solid;
          }*/
          .product-div:hover{
-            background-color: #B8B8B8;
-            color: black;
+            /*background-color: #B8B8B8;
+            color: black;*/
          }
+
 
          .viewSpec{
             padding: 20px;
@@ -66,9 +67,36 @@
             /*background-color: black;*/
          }
 
+         .product-div{
+            /*border-bottom: 3px solid #E0E0E0;*/
+         }
+         
          .productImg{
             max-width: 100px;
             max-height: 100px; 
+         }
+
+         .search-result .twelve{
+            border: 0px solid whitesmoke !important;
+         }
+
+         .product-result:hover{
+            color: black;
+            transform:rotate(1deg) scale(0.9);
+            -ms-transform:rotate(1deg) scale(0.9); /* IE 9 */
+            -moz-transform:rotate(1deg) scale(0.9); /* Firefox */
+            -webkit-transform:rotate(1deg) scale(0.9); /* Safari and Chrome */
+            -o-transform:rotate(1deg) scale(0.9); /* Opera */
+         }
+
+         .productImg:hover{
+           
+         }
+
+         #results-panel{
+            border: 1px solid #E0E0E0 !important;
+            padding: 10px;
+            margin: 10px;
          }
 
          .contain-to-grid, .top-bar{
@@ -95,21 +123,42 @@
             -o-transform: rotate(-5deg); /* Opera */
             -moz-transform: rotate(-5deg); /* Firefox */
             letter-spacing:0px;
-             text-align: center;
-             /*color: #333 !important;*/
+            text-align: center;
+            /*color: #333 !important;*/
             /*text-transform: uppercase;*/
             /*text-shadow: #555 0px 2px 3px;*/
             text-shadow: 2px 2px 0 #000;/*, 4px 4px 0 #333, 6px 6px 0 #333, 8px 8px 0 #333;*/
             color: #2BA6CB !important;
          }
 
+         .logo:hover{
+            transform:rotate(3deg) scale(0.9);
+            -ms-transform:rotate(3deg) scale(0.9); /* IE 9 */
+            -moz-transform:rotate(3deg) scale(0.9); /* Firefox */
+            -webkit-transform:rotate(3deg) scale(0.9); /* Safari and Chrome */
+            -o-transform:rotate(3deg) scale(0.9); /* Opera */
+         }
+
          body, h1, h2, h3, h4, h5{
-            font-family: 'Damion', cursive;
-            /*background: gray;*/
+            /*font-family: 'Kite One', sans-serif;*/
+            font-family: 'Sanchez', serif;
+         }
+
+         body{
+            background: whitesmoke;
          }
 
          .row{
-            /*background: white;*/
+            background: white;
+         }
+
+         .twelve{
+            border-left: 1px solid #E0E0E0 !important;
+            border-right: 1px solid #E0E0E0 !important;
+         }
+
+         .last-column{
+            border-bottom: 1px solid #E0E0E0 !important;
          }
 
 
