--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -77,7 +77,7 @@
          }
 
          .search-result .twelve{
-            border: 0px solid whitesmoke !important;
+            /*border: 0px solid whitesmoke !important;*/
          }
 
          .search-result{
@@ -91,21 +91,43 @@
 
          .product-result:hover{
             /*color: black;*/
-            transform:rotate(1deg) scale(0.8);
-            -ms-transform:rotate(1deg) scale(0.8); /* IE 9 */
-            -moz-transform:rotate(1deg) scale(0.8); /* Firefox */
-            -webkit-transform:rotate(1deg) scale(0.8); /* Safari and Chrome */
-            -o-transform:rotate(1deg) scale(0.8); /* Opera */
          }
 
          .productImg:hover{
            
+            transform:rotate(5deg) scale(1.2);
+            -ms-transform:rotate(5deg) scale(1.2); /* IE 9 */
+            -moz-transform:rotate(5deg) scale(1.2); /* Firefox */
+            -webkit-transform:rotate(5deg) scale(1.2); /* Safari and Chrome */
+            -o-transform:rotate(5deg) scale(1.2); /* Opera */
          }
 
          #results-panel{
             border: 1px solid #E0E0E0 !important;
             padding: 10px;
             margin: 2px;
+         }
+
+         .result-img{
+            border: 1px solid #E0E0E0 !important;
+         }
+
+         .search-result .twelve{
+            /*border: 0px solid black !important;*/
+         }
+
+         .search-result .twelve{
+            text-align: center !important;
+         }
+
+         .search-result .twelve img{
+            padding: 20px;
+         }
+
+         .result-name{
+            background-color: #E0E0E0;
+            margin: 1px;
+            color:black;
          }
 
          .contain-to-grid, .top-bar{
@@ -150,9 +172,11 @@
 
          body, h1, h2, h3, h4, h5, a{
             /*font-family: 'Kite One', sans-serif;*/
-            font-family: 'Sanchez', serif;
+            /*font-family: 'Sanchez', serif;*/
             /*font-family: 'Julius Sans One', sans-serif;*/
             /*font-family: 'Trocchi', serif;*/
+
+            font-family: 'Varela', sans-serif;
          }
 
          body{
