--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -158,7 +158,7 @@
             -o-transform: rotate(-5deg); /* Opera */
             -moz-transform: rotate(-5deg); /* Firefox */
             letter-spacing:0px;
-            text-align: center;
+            /*text-align: center;*/
             /*color: #333 !important;*/
             /*text-transform: uppercase;*/
             /*text-shadow: #555 0px 2px 3px;*/
