--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -174,6 +174,12 @@
             -o-transform:rotate(3deg) scale(0.9); /* Opera */
          }
 
+         .logo-png{
+            width:125px;
+            position: relative;
+            left: -10px;
+         }
+
          body, h1, h2, h3, h4, h5, a{
             /*font-family: 'Kite One', sans-serif;*/
             /*font-family: 'Sanchez', serif;*/
