--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -215,6 +215,18 @@
             background-color: #E0E0E0 !important;
          }
 
+         .product-compare .five{
+            height: 40px !important;
+            line-height: 40px;
+            font-size: 16px;
+         }
+
+         .product-compare .twelve{
+            height: 40px !important;
+            line-height: 40px;
+            font-size: 16px;
+         }
+
 
 
 /* -----------------------------------------
