--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -176,8 +176,8 @@
 
          .logo-png{
             width:125px;
-            position: relative;
-            left: -10px;
+            /*position: relative;
+            left: -10px;*/
          }
 
          body, h1, h2, h3, h4, h5, a{
@@ -215,16 +215,18 @@
             background-color: #E0E0E0 !important;
          }
 
-         .product-compare .five{
-            height: 40px !important;
+         .product-compare{
+            /*height: 40px !important;*/
             line-height: 40px;
             font-size: 16px;
          }
 
-         .product-compare .twelve{
-            height: 40px !important;
-            line-height: 40px;
-            font-size: 16px;
+         .product-compare .four{
+            background-color: whitesmoke;
+         }
+
+         .feature-compare{
+            background-color: #E0E0E0 !important;
          }
 
 
