--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -180,6 +180,54 @@
             text-shadow: 2px 2px 0 #000;/*, 4px 4px 0 #333, 6px 6px 0 #333, 8px 8px 0 #333;*/
             color: #2BA6CB !important;
          }
+         
+         @-webkit-keyframes wiggle {
+           0% {
+             -webkit-transform: rotate3d(0,0,0,0deg)
+           }
+
+           25% {
+             -webkit-transform: rotate3d(0,0,0,5deg)
+           }
+
+           75% {
+             -webkit-transform: rotate3d(0,0,0,-5deg)
+           }
+
+           100% {
+             -webkit-transform: rotate3d(0,0,0,0deg)
+           }
+         }
+
+         @-moz-keyframes wiggle {
+           0% {
+             -moz-transform: rotate(0deg)
+           }
+
+           25% {
+             -moz-transform: rotate(5deg)
+           }
+
+           75% {
+             -moz-transform: rotate(-5deg)
+           }
+
+           100% {
+             -moz-transform: rotate(0deg)
+           }
+         }
+
+         .logo-png:hover {
+           -webkit-animation: wiggle .2s ease-in-out alternate;
+           -moz-animation: wiggle .2s ease-in-out alternate;
+           -ms-animation: wiggle .2s ease-in-out alternate
+         }
+
+         .logo-png:hover{
+           opacity: .8;
+           -ms-filter: "alpha(opacity=80)";
+           filter: alpha(opacity=80)
+         }
 
          .logo:hover{
             transform:rotate(3deg) scale(0.9);
