--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -180,7 +180,7 @@
             text-shadow: 2px 2px 0 #000;/*, 4px 4px 0 #333, 6px 6px 0 #333, 8px 8px 0 #333;*/
             color: #2BA6CB !important;
          }
-         
+
          @-webkit-keyframes wiggle {
            0% {
              -webkit-transform: rotate3d(0,0,0,0deg)
@@ -253,7 +253,12 @@
          }
 
          body{
-            background: whitesmoke;
+            /*background: whitesmoke;*/
+            background: url('/assets/images/wall.png') no-repeat center center fixed; 
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
          }
 
          .row{
@@ -316,6 +321,14 @@
          height: 32px;
          font-size: 14px;
       }
+
+      /*.wall{
+         clear: both;
+         position: absolute;
+         top: 0px;
+         left: 0px;
+         z-index: -1;
+      }*/
 
 
 
