--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -254,7 +254,7 @@
 
          body{
             /*background: whitesmoke;*/
-            background: url('/assets/images/wall.png') no-repeat center center fixed; 
+            background: url('/assets/images/wall.jpg') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
