--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -328,7 +328,7 @@
         }
 
         .twelve{
-            border-left: 20px #2BA6CB solid!important;
+            /*border-left: 20px #333 solid!important;*/
         }
       /*.wall{
          clear: both;
