--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -1,413 +1,259 @@
-/* Artfully masterminded by ZURB  */
-
-/* -------------------------------------------------- 
-   Table of Contents
------------------------------------------------------
-:: Shared Styles
-:: Page Name 1
-:: Page Name 2
-*/
-
-
-/* -----------------------------------------
-   Shared Styles
-   ----------------------------------------- */
-/*   body {
-   	background-color: Azure;
-      }*/
-
- /*  #customDropdown{
-   	height:32px;
-   	line-height:32px;
-   	background-repeat:no-repeat;
-      }*/
-      .columns{
-         /*border: 1px gray solid;*/
-      }
-
-      .row{
-         /*background-color: whitesmoke;*/
-      }
-      li{
-         /*border: 1px gray solid;*/
-      }
- /*  .search-result{
-      border: 1px gray solid;
-      padding: 20px;
-      }*/
-
-/*      select{
-         background: transparent;
-         height: 32px;
-      }
-      #thumb{
-         border: 3px #2BA6CB solid;
-      }
-      .specBorder{
-         border: 3px #2BA6CB solid;
-         }*/
-         .product-div:hover{
-            /*background-color: #B8B8B8;
-            color: black;*/
-         }
-
-
-         .viewSpec{
-            padding: 20px;
-            /*margin:20px;*/
-         }
-
-         .viewSpec span{
-            padding: 10px;
-            margin: 10px;
-            background: whitesmoke;
-         }
-
-         #topbar{
-            /*background-color: black;*/
-         }
-
-         .product-div{
-            /*border-bottom: 3px solid #E0E0E0;*/
-         }
-
-         .product-large-image{
-            /*max-width: 120px;
-            max-height: 120px; */
-            /*width-max: 300px !important;
-            width-min: 300px !important;
-            width: 300px !important;*/
-            /*height-min: 300px !important;
-            height-max: 300px !important;*/
-            height: 75px !important;
-            width: auto !important;
-         }
-
-         .search-result .twelve{
-            /*border: 0px solid whitesmoke !important;*/
-         }
-
-         .search-result{
-            /*background-color: #F8F8F8 !important;*/
-            /*border: 1px solid whitesmoke !important;*/
-         }
-
-         .product-result{
-            height: auto !important;
-         }
-
-         .product-result:hover{
-            /*color: blue !important;*/
-         }
-
-         .productImg:hover{
-           /*color:blue;*/
-            transform:rotate(5deg) scale(1.2);
-            -ms-transform:rotate(5deg) scale(1.2); /* IE 9 */
-            -moz-transform:rotate(5deg) scale(1.2); /* Firefox */
-            -webkit-transform:rotate(5deg) scale(1.2); /* Safari and Chrome */
-            -o-transform:rotate(5deg) scale(1.2); /* Opera */
-         }
-
-         #results-panel{
-            /*border-top: 1px solid #E0E0E0 !important;*/
-            padding: 10px;
-            /*margin: 2px;*/
-         }
-
-         .result-img{
-            border: 1px solid #E0E0E0 !important;
-         }
-
-         .search-result .twelve{
-            /*border: 0px solid black !important;*/
-         }
-
-         .search-result .twelve{
-            text-align: center !important;
-         }
-
-         .search-result .twelve img{
-            padding: 20px;
-         }
-
-         .result-name{
-            background-color: #E0E0E0;
-            margin: 1px;
-            color:black;
-         }
-
-         .result-name:hover{
-            color:#2BA6CB;
-         }
-
-         .contain-to-grid, .top-bar{
-            /*
-            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#333333');
-            background: -webkit-gradient(linear, left top, left bottom, from(#333333), to(#333333)); 
-            background: -moz-linear-gradient(top,  #333333,  #333333);
-            */
-
-            background: -webkit-linear-gradient(top, #434343 0%,#2F2F2F 70%);
-            background: -o-linear-gradient(top, #434343 0%,#2F2F2F 70%);
-            background: -ms-linear-gradient(top, #434343 0%,#2F2F2F 70%);
-            background: linear-gradient(top, #434343 0%,#2F2F2F 70%);
-
-            background-color: black;
-         }
-
-         .profile-thumb{
-            position: relative;
-            top: 7px;
-         }
-
-         .profile-name{
-            position: relative;
-            top: -2px;
-            left: 7px;
-         }
-
-         .logo{
-            position: relative;
-            top: 10px;
-            font-size: 55px !important;
-            /*font-family: 'Damion', cursive;*/
-            font-family: 'Grand Hotel', cursive;
-            /*font-family: 'Lobster', cursive;*/
-            transform: rotate(-5deg);
-            -ms-transform: rotate(-5deg); /* IE 9 */
-            -webkit-transform: rotate(-5deg); /* Safari and Chrome */
-            -o-transform: rotate(-5deg); /* Opera */
-            -moz-transform: rotate(-5deg); /* Firefox */
-            letter-spacing:0px;
-            /*text-align: center;*/
-            /*color: #333 !important;*/
-            /*text-transform: uppercase;*/
-            /*text-shadow: #555 0px 2px 3px;*/
-            text-shadow: 2px 2px 0 #000;/*, 4px 4px 0 #333, 6px 6px 0 #333, 8px 8px 0 #333;*/
-            color: #2BA6CB !important;
-         }
-
-         @-webkit-keyframes wiggle {
-           0% {
-             -webkit-transform: rotate3d(0,0,0,0deg)
-           }
-
-           25% {
-             -webkit-transform: rotate3d(0,0,0,10deg)
-           }
-
-           75% {
-             -webkit-transform: rotate3d(0,0,0,-10deg)
-           }
-
-           100% {
-             -webkit-transform: rotate3d(0,0,0,0deg)
-           }
-         }
-
-         @-moz-keyframes wiggle {
-           0% {
-             -moz-transform: rotate(0deg)
-           }
-
-           25% {
-             -moz-transform: rotate(10deg)
-           }
-
-           75% {
-             -moz-transform: rotate(-10deg)
-           }
-
-           100% {
-             -moz-transform: rotate(0deg)
-           }
-         }
-
-         .logo-png:hover, .mobile-logo-png:hover {
-           -webkit-animation: wiggle .5s ease-in-out alternate;
-           -moz-animation: wiggle .5s ease-in-out alternate;
-           -ms-animation: wiggle .5s ease-in-out alternate;
-        }
-
-         .logo:hover{
-            transform:rotate(3deg) scale(0.9);
-            -ms-transform:rotate(3deg) scale(0.9); /* IE 9 */
-            -moz-transform:rotate(3deg) scale(0.9); /* Firefox */
-            -webkit-transform:rotate(3deg) scale(0.9); /* Safari and Chrome */
-            -o-transform:rotate(3deg) scale(0.9); /* Opera */
-         }
-
-         .logo-png{
-            width:125px;
-            /*position: relative;
-            left: -10px;*/
-         }
-
-         .mobile-logo-png{
-            height: 45px;
-            width: 45px;
-         }
-
-         body, h1, h2, h3, h4, h5, a{
-            /*font-family: 'Kite One', sans-serif;*/
-            /*font-family: 'Sanchez', serif;*/
-            /*font-family: 'Julius Sans One', sans-serif;*/
-            /*font-family: 'Trocchi', serif;*/
-
-            font-family: 'Varela', sans-serif;
-            /*font-family: 'Droid Sans', sans-serif;*/
-            /*font-family: 'Nunito', sans-serif;*/
-            /*letter-spacing: 1px;*/
-            /*word-spacing: 1px;*/
-         }
-
-         body{
-            /*background: url('/assets/images/wall.png') no-repeat center center fixed; */
-            /*background-color: #585858;*/
-            background: url('/assets/images/noise-f1.gif') repeat; 
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-         }
-
-         .row{
-            background: white;
-         }
-
-         .twelve{
-            border-left: 1px solid #E0E0E0 !important;
-            border-right: 1px solid #E0E0E0 !important;
-         }
-
-         .last-column{
-            border-bottom: 1px solid #E0E0E0 !important;
-         }
-
-         .specs-option div:nth-child(n+1){
-            /*background-color: whitesmoke !important;*/
-            /*border-bottom: 1px solid whitesmoke;*/
-
-            line-height: 25px;
-         }
-         .specs-option{
-            border-bottom: 1px solid whitesmoke;
-         }
-
-         .specs-feature div{
-            background: -webkit-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
-            background: -o-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
-            background: -ms-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
-            background: linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
-            height:45px !important;
-
-            border: 0px !important;
-
-            background-color: #E0E0E0 !important;
-         }
-
-         .product-compare{
-            /*height: 40px !important;*/
-            line-height: 40px;
-            font-size: 16px;
-         }
-
-         .product-compare .four{
-            /*border-bottom: 1px solid whitesmoke;*/
-            margin:0px;
-            padding:0px;
-            text-align: center;
-         }
-
-         .spec-row{
-            border-bottom: 1px solid whitesmoke;
-            border-left: 1px solid whitesmoke;
-         }
-
-         .product-compare .four div{
-            padding:5px;
-         }
-
-         /*div > .four{
-            border-bottom: 1px solid whitesmoke;
-            /*height: 100% !important;*/
-            /*width: 100%;*/
-         }*/
-
-         .product-compare .row .four:first-child{
-            text-align: left !important;
-         } 
-
-         .feature-compare{
-            background: -webkit-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
-            background: -o-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
-            background: -ms-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
-            background: linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
-
-            border: 0px !important;
-
-            background-color: #E0E0E0 !important;
-         }
-
-        select{
-         background: transparent;
-         height: 32px;
-         font-size: 14px;
-        }
-
-        iframe{
-            /*position: relative;
-            left: 225px;*/
-        }
-
-        .row:last-child{
-            /*border-left: 20px #333 solid!important;*/
-        }
-        .twitter{
-            position:relative;
-            top: 6px;
-            left:20px;
-        }
-
-        .ui-autocomplete{
-            z-index: 2;
-        }
-        .button{
-            z-index: 1;
-        }
-        .fb-like{
-            position:relative;
-            top:2px;
-            /*left:20px;*/
-            margin-left:20px;
-        }
-
-        .twitter-share-button{
-            position: relative;
-            top:6px;
-            left:5px;
-        }
-
-      /*.wall{
-         clear: both;
-         position: absolute;
-         top: 0px;
-         left: 0px;
-         z-index: -1;
-      }*/
-
-
-
-/* -----------------------------------------
-   Page Name 1
-   ----------------------------------------- */
-
-
-
-
-/* -----------------------------------------
-   Page Name 2
-   ----------------------------------------- */
-
-
+ .viewSpec{
+    padding: 20px;
+}
+
+.viewSpec span{
+    padding: 10px;
+    margin: 10px;
+    background: whitesmoke;
+}
+
+.product-large-image{
+    height: 75px !important;
+    width: auto !important;
+}
+
+.product-result{
+    height: auto !important;
+}
+
+.productImg:hover{
+   transform:rotate(5deg) scale(1.2);
+   -ms-transform:rotate(5deg) scale(1.2); /* IE 9 */
+   -moz-transform:rotate(5deg) scale(1.2); /* Firefox */
+   -webkit-transform:rotate(5deg) scale(1.2); /* Safari and Chrome */
+   -o-transform:rotate(5deg) scale(1.2); /* Opera */
+}
+
+#results-panel{
+    padding: 10px;
+}
+
+.result-img{
+    border: 1px solid #E0E0E0 !important;
+}
+
+.search-result .twelve{
+    text-align: center !important;
+}
+
+.search-result .twelve img{
+    padding: 20px;
+}
+
+.result-name{
+    background-color: #E0E0E0;
+    margin: 1px;
+    color:black;
+}
+
+.result-name:hover{
+    color:#2BA6CB;
+}
+
+.contain-to-grid, .top-bar{
+    background: -webkit-linear-gradient(top, #434343 0%,#2F2F2F 70%);
+    background: -o-linear-gradient(top, #434343 0%,#2F2F2F 70%);
+    background: -ms-linear-gradient(top, #434343 0%,#2F2F2F 70%);
+    background: linear-gradient(top, #434343 0%,#2F2F2F 70%);
+
+    background-color: black;
+}
+
+.profile-thumb{
+    position: relative;
+    top: 7px;
+}
+
+.profile-name{
+    position: relative;
+    top: -2px;
+    left: 7px;
+}
+
+.logo{
+    position: relative;
+    top: 10px;
+    font-size: 55px !important;
+    font-family: 'Grand Hotel', cursive;
+    transform: rotate(-5deg);
+    -ms-transform: rotate(-5deg); /* IE 9 */
+    -webkit-transform: rotate(-5deg); /* Safari and Chrome */
+    -o-transform: rotate(-5deg); /* Opera */
+    -moz-transform: rotate(-5deg); /* Firefox */
+    letter-spacing:0px;
+    text-shadow: 2px 2px 0 #000;
+    color: #2BA6CB !important;
+}
+
+@-webkit-keyframes wiggle {
+   0% {
+     -webkit-transform: rotate3d(0,0,0,0deg)
+ }
+
+ 25% {
+     -webkit-transform: rotate3d(0,0,0,10deg)
+ }
+
+ 75% {
+     -webkit-transform: rotate3d(0,0,0,-10deg)
+ }
+
+ 100% {
+     -webkit-transform: rotate3d(0,0,0,0deg)
+ }
+}
+
+@-moz-keyframes wiggle {
+   0% {
+     -moz-transform: rotate(0deg)
+ }
+
+ 25% {
+     -moz-transform: rotate(10deg)
+ }
+
+ 75% {
+     -moz-transform: rotate(-10deg)
+ }
+
+ 100% {
+     -moz-transform: rotate(0deg)
+ }
+}
+
+.logo-png:hover, .mobile-logo-png:hover {
+   -webkit-animation: wiggle .5s ease-in-out alternate;
+   -moz-animation: wiggle .5s ease-in-out alternate;
+   -ms-animation: wiggle .5s ease-in-out alternate;
+}
+
+.logo:hover{
+    transform:rotate(3deg) scale(0.9);
+    -ms-transform:rotate(3deg) scale(0.9); /* IE 9 */
+    -moz-transform:rotate(3deg) scale(0.9); /* Firefox */
+    -webkit-transform:rotate(3deg) scale(0.9); /* Safari and Chrome */
+    -o-transform:rotate(3deg) scale(0.9); /* Opera */
+}
+
+.logo-png{
+    width:125px;
+}
+
+.mobile-logo-png{
+    height: 45px;
+    width: 45px;
+}
+
+body, h1, h2, h3, h4, h5, a{
+    font-family: 'Varela', sans-serif;
+}
+
+body{
+    background: url('/assets/images/noise-f1.gif') repeat; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.row{
+    background: white;
+}
+
+.twelve{
+    border-left: 1px solid #E0E0E0 !important;
+    border-right: 1px solid #E0E0E0 !important;
+}
+
+.last-column{
+    border-bottom: 1px solid #E0E0E0 !important;
+}
+
+.specs-option div:nth-child(n+1){
+    line-height: 25px;
+}
+.specs-option{
+    border-bottom: 1px solid whitesmoke;
+}
+
+.specs-feature div{
+    background: -webkit-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
+    background: -o-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
+    background: -ms-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
+    background: linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
+    height:45px !important;
+    border: 0px !important;
+    background-color: #E0E0E0 !important;
+}
+
+.product-compare{
+    line-height: 40px;
+    font-size: 16px;
+}
+
+.product-compare .four{
+    margin:0px;
+    padding:0px;
+    text-align: center;
+}
+
+.spec-row{
+    border-bottom: 1px solid whitesmoke;
+    border-left: 1px solid whitesmoke;
+}
+
+.product-compare .four div{
+    padding:5px;
+}
+
+.product-compare .row .four:first-child{
+    text-align: left !important;
+} 
+
+.feature-compare{
+    background: -webkit-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
+    background: -o-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
+    background: -ms-linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
+    background: linear-gradient(top, #E0E0E0 0%,whitesmoke 70%);
+    border: 0px !important;
+    background-color: #E0E0E0 !important;
+}
+
+select{
+ background: transparent;
+ height: 32px;
+ font-size: 14px;
+}
+
+.twitter{
+    position:relative;
+    top: 6px;
+    left:20px;
+}
+
+.ui-autocomplete{
+    z-index: 2;
+}
+.button{
+    z-index: 1;
+}
+.fb-like{
+    position:relative;
+    top:2px;
+    margin-left:20px;
+}
+
+.twitter-share-button{
+    position: relative;
+    top:6px;
+    left:5px;
+}
+
+h1 b{
+    background-color: yellow;
+}
+
+h1 a{
+    text-decoration:underline;
+}
