--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -150,11 +150,11 @@ body, h1, h2, h3, h4, h5, a{
 }
 
 body{
-    background: url('/assets/images/noise-f1.gif') repeat; 
-    -webkit-background-size: cover;
+    background: url('/assets/images/bg-light.png') repeat; 
+    /*-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover;*/
 }
 
 .row{
