--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -296,3 +296,8 @@ background-image: -webkit-linear-gradient(bottom, #FFFFFF 0%, #E3E3E3 100%);
 /* W3C Markup, IE10 Release Preview */ 
 background-image: linear-gradient(to top, #FFFFFF 0%, #E3E3E3 100%);
 }
+
+.latest-panel{
+    background-color: whitesmoke;
+    text-align: center;
+}
